promotion mobile fixed margins

--- a/style/style.css
+++ b/style/style.css
@@ -48,9 +48,8 @@ footer h3 {
   margin-bottom: 32px;
 }
 .border-line {
-  height: 2px;
   background-color: #eeeeee;
-  width: 100%;
+  height: 2px;
 }
 .border-line-top {
   height: 2px;
@@ -156,8 +155,8 @@ footer h3 {
   margin-bottom: 1.5rem;
 }
 .Auction-header a {
-  font-weight: bold;
   text-decoration: underline;
+  font-weight: 600;
 }
 .Auction-header p {
   margin: 0;
@@ -223,12 +222,16 @@ footer h3 {
 /* /Auction  */
 
 /* Promotion */
+.promotion-container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 80px;
+  background-color: white;
+}
 .promotion-smaller {
   font-size: 3.5rem;
 }
 .promotion {
-  border-bottom: 2px solid #eeeeee;
-  border-top: 2px solid #eeeeee;
   padding-top: 120px;
   padding-bottom: 120px;
   background-image: url(/assets/upsell-footer-image.svg);
@@ -357,11 +360,6 @@ footer h3 {
     padding-top: 56px;
     padding-bottom: 40px;
   }
-  .promotion {
-    background-image: url(/assets/upsell-footer-image.svg);
-    background-repeat: no-repeat;
-    background-position: 853px 1px;
-  }
   .auction {
     display: grid;
     grid-template-columns: 290px 290px 290px 290px;
@@ -374,5 +372,27 @@ footer h3 {
     padding: 0 0 92px 32px;
     background-color: white;
   }
+  /* /Auction */
+  .border-line {
+    max-width: ;
+  }
+  .promotion h1 {
+    margin-right: 122px;
+  }
+  .promotion {
+    background-image: url(/assets/upsell-footer-image.svg);
+    background-repeat: no-repeat;
+    background-position: 220px 218px;
+    padding-top: 64px;
+    padding-bottom: 66px;
+  }
+  .promotion-container {
+    padding: 0 0 0 32px;
+  }
+  .hero-paragraph {
+    margin-right: 189px;
+    margin-bottom: 0;
+    margin-top: 24px;
+  }
+  /* Promotion */
 }
-/* /Auction */
